--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_sorting.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_sorting.scss
@@ -1,7 +1,7 @@
 .storage-sorting {
     position: sticky;
     top: 15px;
-    width: 82%;
+    width: 84%;
     height: 90px;
     margin: 32px auto;
     padding: 0.8rem;
@@ -9,63 +9,21 @@
     z-index: 3;
     box-shadow: 0px 0px 5px black;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     place-items: center;
 
-    & .sorting-layoutToggler {
+    & select {
         cursor: pointer;
-        width: 50px;
-        height: 50px;
-        background-color: var(--dark-blue);
-        position: relative;
-        border-radius: 5px;
-        &:hover {
-            opacity: 0.8;
-        }
+        width: 230px;
+        background-color: #dbdbec;
+        padding: 0.3rem 0.2rem;
+        font-size: 1.4rem;
+        font-family: var(--font-display);
 
-        & span {
-            background-color: var(--off-red);
-            opacity: 0.9;
-            display: block;
-            transition: height 400ms;
-        }
-
-        &.sorting-cardLayout {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr;
-            place-items: center;
-            padding: 0.1rem;
-
-            & span {
-                width: 80%;
-                height: 80%;
-                border-radius: 23%;
-            }
-        }
-    }
-
-    & .toggleDropdowns {
-        width: 50px;
-        height: 50px;
-        border-radius: 5px;
-        background-color: var(--dark-blue);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        cursor: pointer;
-
-        & span {
-            width: 80%;
-            height: 11%;
-            background-color: var(--off-red);
-            display: block;
-            position: absolute;
-            border-radius: 12px;
-
-            &:nth-child(2) {
-                transform: rotate(90deg);
+        & option {
+            & .option {
+                width: 100%;
+                padding: 6rem;
             }
         }
     }
