--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
@@ -1,6 +1,18 @@
+@mixin media-1080 {
+    @media screen and (max-width: 1080px) {
+        @content;
+    }
+}
+@mixin media-710 {
+    @media screen and (max-width: 710px) {
+        @content;
+    }
+}
+
 .storage-itemsContainer {
-    width: 84%;
+    width: 90%;
     margin: 0 auto;
+
     &.storage-container-rowsLayout {
         height: auto;
     }
@@ -16,18 +28,28 @@
         padding: 10px 0px;
         row-gap: 1.5em;
         column-gap: 1.5em;
+        @include media-1080() {
+            grid-template-columns: repeat(3, 1fr);
+            row-gap: 1em;
+            column-gap: 0.4em;
+        }
 
         & .storageitem {
             width: 100%;
             height: 480px;
             position: relative;
+            @include media-1080() {
+                height: 430px;
+            }
 
             & .storageitem-image {
                 cursor: pointer;
                 height: 350px;
-                width: 100%;
                 background-size: cover;
                 background-position: center;
+                @include media-1080() {
+                    height: 310px;
+                }
             }
 
             & .details {
