--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
@@ -1,26 +1,3 @@
-@mixin mq--bigScreen {
-    @media screen and (max-width: 1480px) {
-        @content;
-    }
-}
-
-@mixin mq--normal {
-    @media screen and (max-width: 1080px) {
-        @content;
-    }
-}
-@mixin mq--tablet {
-    @media screen and (max-width: 710px) {
-        @content;
-    }
-}
-
-@mixin mq--mobile {
-    @media screen and (max-width: 420px) {
-        @content;
-    }
-}
-
 .storage-itemsContainer {
     margin: 0 auto;
 
@@ -94,10 +71,11 @@
 
                 & .name {
                     cursor: pointer;
+                    padding-bottom: 9px;
+                    line-height: 1rem;
                     font-weight: 400;
                     font-size: 1.1rem;
                     @include mq--tablet() {
-                        line-height: 0.1rem;
                         font-size: 1rem;
                     }
 
@@ -145,9 +123,9 @@
 
                     &-circle {
                         cursor: pointer;
-                        width: 9px;
-                        height: 9px;
-                        margin: 0 3px;
+                        width: 12px;
+                        height: 12px;
+                        margin: 0 2px;
                         background: #cf0847;
                         border-radius: 50%;
 
@@ -159,6 +137,14 @@
                         }
                         &:nth-child(4) {
                             background: black;
+                        }
+                        @include mq--normal() {
+                            width: 10px;
+                            height: 10px;
+
+                            &:nth-child(2) {
+                                background: rgb(94, 22, 104);
+                            }
                         }
                     }
                     & span {
