fixing the pop up

--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/stashstorage.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/stashstorage.scss
@@ -29,4 +29,5 @@
     // background-color: #f7f5f6;
     @import './filterform';
     @import './itemsLayout';
+    @import './createnewitemform';
 }
