--- a/stash/src/global.scss
+++ b/stash/src/global.scss
@@ -76,10 +76,6 @@
 body {
     min-height: 100vh;
 
-    & div {
-        background-color: transparent;
-    }
-
     //the genarl stash loading spinner
     & .loadingspinner {
         width: 100%;
@@ -102,8 +98,11 @@ body {
             position: absolute;
             width: 351px;
             height: 351px;
+            max-width: 90vw;
+            max-height: 90vw;
+
             padding: 10px;
-            z-index: 33030;
+            z-index: 999;
 
             .circle-line {
                 -webkit-box-sizing: border-box;
