--- a/stash/src/global.css
+++ b/stash/src/global.css
@@ -282,46 +282,64 @@
 .stashesOverview .stashstorage .newitemform {
   width: 100vw;
   height: 490px;
-  position: absolute;
+  position: fixed;
+  background-color: #fffbd1;
   bottom: 0;
   left: 0;
-  background-color: hotpink;
   font-family: var(--font-display);
 }
 .stashesOverview .stashstorage .newitemform .content {
   height: 440px;
-  background-color: palegoldenrod;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 0.65fr 0.35fr;
 }
 .stashesOverview .stashstorage .newitemform .content .form {
   height: 100%;
   background-color: blue;
 }
 .stashesOverview .stashstorage .newitemform .content .showcase {
-  display: grid;
-  place-items: center;
-  background-color: orange;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.stashesOverview .stashstorage .newitemform .content .showcase .sidetext {
+  writing-mode: vertical-lr;
+  background: linear-gradient(var(--off-red), var(--dark-blue));
+  background-clip: text;
+  color: transparent;
+  font-size: 1.8rem;
+  font-weight: 200;
+  font-family: var(--font-logo);
 }
 .stashesOverview .stashstorage .newitemform .content .showcase .card {
-  width: 190px;
+  width: 300px;
   max-width: 90%;
-  height: 320px;
-  background-color: rosybrown;
+  min-height: 380px;
+  max-height: 96%;
 }
 .stashesOverview .stashstorage .newitemform .content .showcase .card .image {
-  height: 210px;
-  background-color: green;
+  height: 290px;
+  background: url("./images/rick1.jpg") center center;
+  background-size: cover;
+}
+.stashesOverview .stashstorage .newitemform .content .showcase .card .details {
+  padding-right: 0.3rem;
 }
 .stashesOverview .stashstorage .newitemform .content .showcase .card .details .name {
-  font-size: 1rem;
+  font-size: 1.4rem;
+  font-family: 300;
+}
+.stashesOverview .stashstorage .newitemform .content .showcase .card .details .info {
+  display: flex;
+  font-size: 1.2rem;
+  font-size: 200;
+  justify-content: space-between;
 }
 .stashesOverview .stashstorage .newitemform .footer {
   width: 100%;
   display: grid;
   place-items: center;
   padding: 0px 6px;
-  background-color: #a57c6d;
 }
 .stashesOverview .stashstorage .newitemform .footer .button {
   cursor: pointer;
